style.css
@font-face {
    font-family: "GB Boot";
    src: url("gbboot-font/Gbboot-ALpM.ttf");
}

body {
    width: 100%;
    height: 100%;
    box-shadow: none;
}

header {
    width: 100%;
    height: 15%;
    position: absolute;
    top: 0%;
    left: 0%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    z-index: 50;
    background-color: red;
    color: #fff;
    border-bottom: 5px solid black;
    font-family: "Pokemon Solid", sans-serif;
    font-size: x-large;
    font-weight: 100;
}

main {
    width: 100%;
    height: 85%;
    top: 15%;
    left: 0%;
    position: absolute;
    z-index: 1;
    background-color: antiquewhite;
}

#startScreen {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 40vw;
    height: 40vw;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border: 1px solid red;
}

.halfCircle {
    position: absolute;
    left: 50%;
    width: 90%;
    height: 45%;
    border: 5px solid black;
}
.topHalf { background-color: red; border-radius: 50% 50% 0 0 / 100% 100% 0% 0%; transform: translate(-50%, -50%);}
.bottomHalf { background-color: white; border-radius: 0 0 50% 50% / 0% 0% 100% 100%; transform: translate(-50%, 50%);}

.middleCircle {
    height: 15%;
    width: 15%;
    border-radius: 100%;
    background-color: #fff;
    border: 10px solid black;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    justify-content: center;
    /* align-items: center; */
    text-align: center;
    font-size: large;
    font-family: "GB Boot", sans-serif;
    font-size: x-large;
    user-select: none;
}
.middleCircle:hover { background-color: red; color: #fff;}
.middleCircle:active { margin-left: 1px; margin-top: 1px; filter: brightness(0.8);}

#gameSpace {
    display: none;
    width: 60%;
    height: auto;
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -30%);
    border: 1px solid black;
}

.letterbox {
    background-color: #fff;
    border: 0.5px dashed pink;
    border-radius: 25%;
    /* text-align: center; */

    /* position: absolute;
    top: 50%; left: 50%; 
    transform: translate(-50%,-50%); */

    display: flex;
    justify-content: center;
    align-items: center;

    font-size: medium;
    /* width: max(10vh,100px);
    height: max(10vh,100px); */
    /* min-height: 100px;
    min-width: 100px; */
}

#endScreen {
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-wrap: nowrap;
    width: 40vh;
    height: 40vh;
    border: 1px solid blue;
    background-color: #fff;
    z-index: 2000;
    position: absolute;
    left: 50%; top: 50%;
    transform: translate(-50%,-50%);
    text-align: center;
}

